--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,31 +18,72 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
-ul {
-  list-style: none;
-}
-.country-title {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.country-info__thumb,
-.list-item {
+
+.search-form {
   display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 6px 0;
+  margin: 0 auto;
+
+  background-color: blue;
 }
-.flags__img {
-  margin-right: 10px;
+.search-form input {
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
-.country-title {
-  font-weight: bolder;
+/*________________ gallery_________________ */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+
+  max-width: 1140px;
+  margin: 20px auto;
+
+  gap: 10px;
 }
-.country-title-info {
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 36px;
-  margin-top: 0;
-  margin-bottom: 0;
+.gallery__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-basis: calc((100% - 40px) / 5);
+
+  transition: box-shadow 250ms ease, transform 250ms ease;
 }
-.country-list {
-  padding: 0;
+.gallery__item:hover,
+.gallery__item:focus {
+  transform: scale(1.04);
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+/* 
+.gallery__link {
+  flex: 0 1 100%;
+} */
+
+.gallery__image {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery__info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  column-gap: 8px;
+  padding: 7px 5px;
+}
+.gallery__info-item {
+  font-size: 10px;
+}
+.load-more {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
