--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,10 +60,10 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-/* 
+
 .gallery__link {
   flex: 0 1 100%;
-} */
+}
 
 .gallery__image {
   display: block;
