--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,10 +29,17 @@ body {
   background-color: blue;
 }
 .search-form input {
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+  border-radius: 5px;
+  /* border-top-left-radius: 5px; */
   padding-left: 5px;
   padding-right: 5px;
+}
+button {
+  border-radius: 5px;
+}
+button:hover,
+button:focus {
+  background-color: aqua;
 }
 /*________________ gallery_________________ */
 .gallery {
